# xpouch-vault

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_zh.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  crypto.rs  db.rs  lib.rs  main.rs  node.rs
src/components/: AddKeyDialog.tsx  AddNodeDialog.tsx  KeyCard.tsx  LanguageSwitcher.tsx  NodeCard.tsx  NodeDetailPanel.tsx  Toast.tsx  VaultLogo.tsx
src/components/ui/: ActionButton.tsx  ConfirmDialog.tsx  Dialog.tsx  DialogActions.tsx  EmptyState.tsx  Form.tsx  PageHeader.tsx  StatCard.tsx
src/i18n/: index.ts  translations.ts
src/pages/: LobsterPage.tsx  SandboxPage.tsx  VaultPage.tsx
src/store/: nodeStore.ts  toastStore.ts  vaultStore.ts
src/types/: node.ts  vault.ts
src/utils/: format.ts
