[package]
name = "tauri-app"
version = "0.1.0"
description = "A secure desktop vault for managing AI API keys"
authors = ["XPouch"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xpouch_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
aes-gcm = "0.10.3"
uuid = { version = "1.23.0", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time", "sync", "rt", "macros"] }
futures = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
http = "1"

